catkin_ws/logs/px4_offboard/build.make.032.log
[  0%] Built target actionlib_generate_messages_cpp
[  0%] Built target _catkin_empty_exported_target
[  0%] Built target diagnostic_msgs_generate_messages_cpp
[  0%] Built target actionlib_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target diagnostic_msgs_generate_messages_lisp
[  0%] Built target diagnostic_msgs_generate_messages_py
[  0%] Built target nav_msgs_generate_messages_cpp
[  0%] Built target actionlib_generate_messages_py
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target mavros_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_py
[  0%] Built target actionlib_generate_messages_lisp
[  0%] Built target _px4_offboard_generate_messages_check_deps_JoyCommand
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target nav_msgs_generate_messages_lisp
[  0%] Built target nav_msgs_generate_messages_py
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target sensor_msgs_generate_messages_cpp
[  0%] Built target mavros_msgs_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target sensor_msgs_generate_messages_lisp
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target tf2_msgs_generate_messages_lisp
[  0%] Built target tf2_msgs_generate_messages_py
[  0%] Built target tf2_msgs_generate_messages_cpp
[  0%] Built target mavros_msgs_generate_messages_lisp
[  8%] [34m[1mGenerating Lisp code from px4_offboard/JoyCommand.msg[0m
[35m[1mScanning dependencies of target teleop[0m
[ 16%] [34m[1mGenerating Python from MSG px4_offboard/JoyCommand[0m
[ 25%] [34m[1mGenerating C++ code from px4_offboard/JoyCommand.msg[0m
[ 33%] [32mBuilding CXX object CMakeFiles/teleop.dir/src/teleop.cpp.o[0m
[ 33%] Built target px4_offboard_generate_messages_lisp
[ 41%] [34m[1mGenerating Python msg __init__.py for px4_offboard[0m
[ 41%] Built target px4_offboard_generate_messages_py
[ 41%] Built target px4_offboard_generate_messages_cpp
[35m[1mScanning dependencies of target apriltag[0m
[35m[1mScanning dependencies of target checker[0m
[35m[1mScanning dependencies of target SLAM[0m
[ 50%] [32mBuilding CXX object CMakeFiles/checker.dir/src/checker.cpp.o[0m
[ 58%] [32mBuilding CXX object CMakeFiles/apriltag.dir/src/apriltag.cpp.o[0m
[ 66%] [32mBuilding CXX object CMakeFiles/SLAM.dir/src/SLAM.cpp.o[0m
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/SLAM.cpp:2:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/CtrlPx4.cpp: In constructor ‘CtrlPx4::CtrlPx4()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/CtrlPx4.cpp:36:51: error: ‘aprilCallback’ is not a member of ‘CtrlPx4’
   april_sub_ = nh_.subscribe("april/cmd_mav",100,&CtrlPx4::aprilCallback,this);  
                                                   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/CtrlPx4.cpp: At global scope:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/px4_offboard/src/CtrlPx4.cpp:118:63: error: no ‘void CtrlPx4::aprilCallback(px4_offboard::JoyCommand)’ member function declared in class ‘CtrlPx4’
 void CtrlPx4::aprilCallback(const px4_offboard::JoyCommand joy)
                                                               ^
[ 75%] [32m[1mLinking CXX executable /home/tuofeichen/SLAM/MAV-Project/catkin_ws/devel/lib/px4_offboard/checker[0m
[ 83%] [32m[1mLinking CXX executable /home/tuofeichen/SLAM/MAV-Project/catkin_ws/devel/lib/px4_offboard/apriltag[0m
[ 83%] Built target checker
[ 83%] Built target px4_offboard_generate_messages
[ 83%] Built target apriltag
[ 91%] [32m[1mLinking CXX executable /home/tuofeichen/SLAM/MAV-Project/catkin_ws/devel/lib/px4_offboard/teleop[0m
[ 91%] Built target teleop
make[2]: *** [CMakeFiles/SLAM.dir/src/SLAM.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
